# OKVR

./: CMakeLists.txt  OKVS.cpp  OKVS.h  Paxos.h  PaxosImpl.h  main.cpp
